--- a/wp-content/themes/miradas/scss/blocks/_notas_de_interes.scss
+++ b/wp-content/themes/miradas/scss/blocks/_notas_de_interes.scss
@@ -1,4 +1,5 @@
 .notas_de_interes {
+  @include padding-section();
   
     &__cont {
       display: grid;  
@@ -26,6 +27,8 @@
       display: flex;
       flex-direction: column;
       column-gap: 10px;
+      padding: 20px;
+      box-shadow: 5px 5px 10px $grey-light; 
 
       @include responsive ('tablet-h') {
         column-gap: inherit;
