--- a/wp-content/themes/miradas/scss/components/_flickity.scss
+++ b/wp-content/themes/miradas/scss/components/_flickity.scss
@@ -5,3 +5,23 @@
 .flickity-page-dots {
     display: none;
 }
+
+.flickity-button {
+    position: absolute;
+    background: transparent;
+    border: none;
+    color: #333;
+}
+
+.flickity-prev-next-button {
+    width: 70px !important;
+    height: 70px !important;
+}
+
+.flickity-button-icon {
+    display: block;
+}
+
+.flickity-prev-next-button.previous {
+    transform: rotate(360deg) translate(0, 50%);
+}
