--- a/wp-content/themes/miradas/scss/abstracts/_variables.scss
+++ b/wp-content/themes/miradas/scss/abstracts/_variables.scss
@@ -19,6 +19,7 @@ $light-green:#b6d133 !default;
 $violet:#F9CEEA !default;
 $pink:#FBD9D0 !default;
 $dark-green:#D2E7A2 !default;
+$green: #859D84 !default;
 
 
 
