--- a/wp-content/themes/miradas/scss/base/_base.scss
+++ b/wp-content/themes/miradas/scss/base/_base.scss
@@ -377,6 +377,10 @@ strong * {
 
 .instagram {
   @include padding-section();
+
+  .title {
+    display: block;
+  }
 }
 
 .logos + .notas_de_interes {
