--- a/wp-content/themes/miradas/scss/blocks/_notas_de_interes.scss
+++ b/wp-content/themes/miradas/scss/blocks/_notas_de_interes.scss
@@ -28,7 +28,7 @@
       flex-direction: column;
       column-gap: 10px;
       padding: 20px;
-      box-shadow: 5px 5px 10px $grey-light; 
+      box-shadow: 5px 5px 10px $green; 
 
       @include responsive ('tablet-h') {
         column-gap: inherit;
@@ -58,7 +58,17 @@
     }
   
     .read_more {
+      @extend .button;
       font-size: 16px; 
+      margin-top: 20px;
+      width: fit-content;
+      padding: 0 22px;
+      height: 35px;
+      line-height: 33px;
+      text-transform: capitalize;
+      letter-spacing: 1px;
+      background: $green;
+      border: 1px solid $green;
     }
   }
   
