--- a/wp-content/themes/miradas/scss/base/_base.scss
+++ b/wp-content/themes/miradas/scss/base/_base.scss
@@ -57,7 +57,7 @@ h5,.h5,.h5 p {@include h5;}
 h6,.h6,.h6 p {@include h6;}
 
 a {
-  color: $secondary-color; 
+  color: $primary-color; 
   transition: all 0.3s ease;
 
   &:hover {
@@ -247,9 +247,15 @@ strong * {
   z-index: 101;
   border-radius: 5px;
 
-  @include responsive ('tablet-v') {
-    width: calc(100% - 30px);
+  @include responsive ('tablet-h') {
+    width: 100%;
+    height: 100vh;
+    top: 0;
   }
+
+ /*  @include responsive ('tablet-v') {
+    width: calc(100% - 30px);
+  } */
 
   .close_popup {
     position: absolute;
