--- a/wp-content/themes/miradas/scss/blocks/_notas_de_interes.scss
+++ b/wp-content/themes/miradas/scss/blocks/_notas_de_interes.scss
@@ -27,7 +27,6 @@
       display: flex;
       flex-direction: column;
       column-gap: 10px;
-      padding: 20px;
       box-shadow: 5px 5px 10px $green; 
 
       @include responsive ('tablet-h') {
@@ -56,9 +55,13 @@
       margin-bottom: 10px;
   
     }
+
+    &__content {
+      padding: 20px;
+    }
   
     .read_more {
-      @extend .button;
+      /*  @extend .button;
       font-size: 16px; 
       margin-top: 20px;
       width: fit-content;
@@ -68,7 +71,15 @@
       text-transform: capitalize;
       letter-spacing: 1px;
       background: $green;
-      border: 1px solid $green;
+      border: 1px solid $green; */
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+
+      &::after {
+        content: '→';
+        margin-left: 10px;
+      }
     }
   }
   
