--- a/wp-content/themes/miradas/scss/header/_base.scss
+++ b/wp-content/themes/miradas/scss/header/_base.scss
@@ -66,7 +66,10 @@
 
       .buttom_suscribe {
         @include responsive ('tablet-h') {
-          display: none;
+          margin: 0 auto;
+          display: block;
+          width: fit-content;
+          margin-top: 40px;
         }
       }
     }
