subo-por-las-dudas

--- a/wp-content/themes/miradas/scss/main.scss
+++ b/wp-content/themes/miradas/scss/main.scss
@@ -59,7 +59,8 @@ Text Domain: twentysixteen
   'blocks/_que_ofrecemos',
   'blocks/_image_with_text',
   'blocks/_nuestro_equipo',
-  'blocks/_contacto'; 
+  'blocks/_contacto',
+  'blocks/_layout_instagram';
 
   // Posts
   @import
