--- a/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
+++ b/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
@@ -35,7 +35,11 @@
 
   @include responsive('desktop') {
     font-size: 42px;
-    margin-bottom: 25px
+    margin-bottom: 25px;
+  }
+
+  @include responsive('mobile-h') {
+    font-size: 36px;
   }
 }
 
