--- a/wp-content/themes/miradas/scss/main.scss
+++ b/wp-content/themes/miradas/scss/main.scss
@@ -60,7 +60,8 @@ Text Domain: twentysixteen
   'blocks/_image_with_text',
   'blocks/_nuestro_equipo',
   'blocks/_contacto',
-  'blocks/_layout_instagram';
+  'blocks/_layout_instagram',
+  'blocks/_talleres';
 
   // Posts
   @import
