--- a/wp-content/themes/miradas/scss/blocks/_nuestro_equipo.scss
+++ b/wp-content/themes/miradas/scss/blocks/_nuestro_equipo.scss
@@ -50,6 +50,7 @@
     &:hover {
       background-color: $dark-green;
       border-radius: 20px;
+      transform: translate(0px, -10px);
     }
   }
 
