--- a/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
+++ b/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
@@ -82,7 +82,7 @@
 @mixin text_block() {
 	h1,h2,h3,h4,h5,h6 {
 		//color: $primary-color;
-    margin-bottom: 20px 
+    margin-bottom: 20px; 
 	}
 
 	h1 {
