--- a/wp-content/themes/miradas/scss/blocks/_contacto.scss
+++ b/wp-content/themes/miradas/scss/blocks/_contacto.scss
@@ -13,6 +13,14 @@
     @include responsive ('tablet-h') {
       grid-template-columns: repeat(1, 1fr);
     }
+
+    p {
+      margin: 10px 0 30px 0;
+    }
+
+    h1,h2,h3,h4,h5,h6 {
+      margin-bottom: 0; 
+    }
   }
 
   .date {
