--- a/wp-content/themes/miradas/scss/blocks/_stay_informed.scss
+++ b/wp-content/themes/miradas/scss/blocks/_stay_informed.scss
@@ -121,9 +121,9 @@
                 border: 1px solid $primary-color;
 
                 &:hover {
-                    background-color: $white !important;
+                    background-color: transparent !important;
                     border: 1px solid $white;
-                    color: $primary-color;
+                    color: $white !important;
                 }
             }
         }
