--- a/wp-content/themes/miradas/style.css
+++ b/wp-content/themes/miradas/style.css
@@ -1168,17 +1168,9 @@ strong * {
   display: flex;
   gap: 12px;
 }
-.socials svg path fill {
-  color: red;
-}
 @media only screen and (max-width: 1050px) {
   .socials {
     gap: 40px;
-  }
-}
-@media only screen and (max-width: 600px) {
-  .socials {
-    display: none;
   }
 }
 .socials a {
@@ -2830,9 +2822,9 @@ https://flickity.metafizzy.co
   border: 1px solid #282570;
 }
 .stay_informed form .gform_footer .gform_button:hover {
-  background-color: #ffffff !important;
+  background-color: transparent !important;
   border: 1px solid #ffffff;
-  color: #282570;
+  color: #ffffff !important;
 }
 
 .logos {
@@ -3988,6 +3980,8 @@ body.js-popup-active .close_popup {
 .nuestro_equipo__item:hover {
   background-color: #D2E7A2;
   border-radius: 20px;
+  -webkit-transform: translate(0px, -10px);
+          transform: translate(0px, -10px);
 }
 .nuestro_equipo__persona {
   text-align: center;
@@ -4244,6 +4238,12 @@ body.js-popup-active .close_popup {
     -ms-grid-columns: 1fr;
     grid-template-columns: repeat(1, 1fr);
   }
+}
+.contacto__cont p {
+  margin: 10px 0 30px 0;
+}
+.contacto__cont h1, .contacto__cont h2, .contacto__cont h3, .contacto__cont h4, .contacto__cont h5, .contacto__cont h6 {
+  margin-bottom: 0;
 }
 .contacto .date {
   display: -webkit-box;
