--- a/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
+++ b/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
@@ -111,6 +111,10 @@
       @include responsive('mobile-h') {
         font-size: 16px;
       }
+
+      img {
+        object-fit: contain;
+      }
   }
   .wp-video {
       padding: 20px 0;
