justes-css-finales

--- a/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
+++ b/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
@@ -25,7 +25,7 @@
 .site__title {@include site__title();}
 
 @mixin title() {
-  font-size: 55px;
+  font-size: 50px;
   font-family: "Rosario", sans-serif;
   line-height: 1.09;
   font-weight: 600;
@@ -126,7 +126,7 @@
 	}
 	ul {
 		li {
-			list-style: none;
+			list-style: circle;
       margin-bottom: 15px;
       font-size: 20px;
 		}
