--- a/wp-content/themes/miradas/scss/blocks/_image_with_text.scss
+++ b/wp-content/themes/miradas/scss/blocks/_image_with_text.scss
@@ -59,11 +59,12 @@
         }
     }
 
-    &__text {
+    &__text, p {
         margin-bottom: 25px;
         //width: 600px;
         max-width: 100%;
         line-height: 1.8;
+        font-size: 18px;
 
         @include responsive ('mobile-h') {
             width: 100%;
