--- a/wp-content/themes/miradas/scss/base/_base.scss
+++ b/wp-content/themes/miradas/scss/base/_base.scss
@@ -227,7 +227,7 @@ strong * {
 
   img {
       object-fit: cover;
-      max-height: 200px;
+      max-width: 180px;
   }
 }
 
@@ -319,15 +319,17 @@ strong * {
   &__cont {
     position: absolute;
     //top: 50%; sin AOS
-    top: 26%;
-    transform: translate(50%, -50%);
+    top: 50%;
+    transform: translate(-50%, -50%) !important;
     //right: 50%; sin AOS
-    left: 0;
+    left: 50%;
     width: 100%;
     z-index: 4;
     color: $white;
+    text-align: center;
+
     @include text_block();
-    width: 1200px;
+    width: 1600px;
     max-width: 100%;
 
     @include responsive ('mobile-s') {
@@ -335,11 +337,15 @@ strong * {
       top: 10px
     }
     
+    .container_big {
+      padding: 0 30px;
+    }
   }
 
   &__title {
     @include h2();
     color: #D1F5AB;
+    text-transform: uppercase !important;
   }
 }
 
