--- a/wp-content/themes/miradas/scss/blocks/_layout_instagram.scss
+++ b/wp-content/themes/miradas/scss/blocks/_layout_instagram.scss
@@ -6,6 +6,10 @@
     text-align: center;
     margin: 0 0 50px 0;
     text-align: center;
+
+    a {
+      text-transform: lowercase;
+    }
   }
 
   &__slider {
