--- a/wp-content/themes/miradas/scss/blocks/_video.scss
+++ b/wp-content/themes/miradas/scss/blocks/_video.scss
@@ -8,10 +8,11 @@
     width: 70%;
     aspect-ratio: 1.83;
     margin: 0 auto;
+    border-radius: 10px;
 
     @include responsive('tablet-h') {
-        width: 100%;
-        padding-top: 50%;
+      width: 100%;
+      padding-top: 50%;
     }
   
   }
@@ -25,6 +26,7 @@
       object-position: center;
       width: 100%;
       height: 100%;
+      border-radius: 10px;
     }
       
     .image_placeholder {
